--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nerv-devtools": "^1.3.9",
     "nervjs": "^1.3.9",
     "webfont": "^8.2.1",
+    "webfonts-generator": "^0.4.0",
     "xxhashjs": "^0.2.2"
   },
   "devDependencies": {
